third_party/move/move-compiler-v2/tests/more-v1/expansion/use_function_same_name_as_struct.exp

Diagnostics:
warning: unused alias
  ┌─ tests/more-v1/expansion/use_function_same_name_as_struct.move:9:17
  │
9 │     use 0x2::X::u;
  │                 ^ Unused 'use' of alias 'u'. Consider removing it

error: invalid name
   ┌─ tests/more-v1/expansion/use_function_same_name_as_struct.move:10:12
   │
10 │     struct u {}
   │            ^ Invalid struct name 'u'. Struct names must start with 'A'..'Z'

warning: unused alias
   ┌─ tests/more-v1/expansion/use_function_same_name_as_struct.move:15:22
   │
15 │     use 0x2::X::u as Bar;
   │                      ^^^ Unused 'use' of alias 'Bar'. Consider removing it

error: duplicate declaration, item, or annotation
   ┌─ tests/more-v1/expansion/use_function_same_name_as_struct.move:15:22
   │
14 │     struct Bar {}
   │            --- Alias previously defined here
15 │     use 0x2::X::u as Bar;
   │                      ^^^ Duplicate module member or alias 'Bar'. Top level names in a namespace must be unique
